manifests/mariadb.yml
apiVersion: v1
kind: Service
metadata:
  name: desobot-mariadb
  namespace: desobot
spec:
  selector:
    app: desobot-mariadb
  ports:
  - port: 3306
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: desobot-mariadb
  namespace: desobot
spec:
  selector:
    matchLabels:
      app: desobot-mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: desobot-mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
          - name: desobot-mariadb-persistent-storage
            mountPath: /var/lib/mysql
      volumes:
        - name: desobot-mariadb-persistent-storage
          persistentVolumeClaim:
              claimName: desobot-mariadb-pv-claim
