manifests/desobot.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: desobot
  namespace: desobot
  labels:
    app: desobot
spec:
  selector:
    matchLabels:
      app: desobot
  template:
    metadata:
      labels:
        app: desobot
    spec:
      containers:
        - image: __CI_REGISTRY_IMAGE__:__VERSION__ # Replaced at deploy time in gitlab CI config
          name: desobot
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 200M
              cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: desobot-service
  namespace: desobot
spec:
  selector:
    app: desobot
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: desobot-ingress
  namespace: desobot
spec:
  rules:
    - host: desobot
      http:
        paths:
          - path: /
            backend:
              serviceName: desobot-service
              servicePort: 80
